# omo_r1mini

./: .gitignore  README.md
omo_r1mini/: CMakeLists.txt  package.xml
omo_r1mini_ar_marker/: CMakeLists.txt  package.xml
omo_r1mini_ar_marker/launch/: omo_r1_ar_track.launch  omo_r1mini_ar_track_model.launch
omo_r1mini_ar_marker/rviz/: ar_track.rviz
omo_r1mini_bringup/: CMakeLists.txt  package.xml  setup.py
omo_r1mini_bringup/config/: camera.yaml  motor_spec.yaml  robot_config.yaml
omo_r1mini_bringup/launch/: omo_r1mini_bringup.launch  omo_r1mini_camera.launch  omo_r1mini_lidar.launch  omo_r1mini_lidar_hlds.launch  omo_r1mini_motor_setting.launch  omo_r1mini_move_basic.launch  omo_r1mini_robot.launch  omo_r1mini_robot.launch.save  omo_r1mini_robot_cyglidar.launch  omo_r1mini_robot_hlds.launch  robot.launch
omo_r1mini_bringup/nodes/: motor_vs.py  omo_packet_handler.py  omo_r1mini_node.py
omo_r1mini_bringup/scripts/: create_udev_rules.sh
omo_r1mini_description/: CMakeLists.txt  package.xml
omo_r1mini_description/launch/: description.launch  description_cyglidar.launch  description_hlds.launch  description_upcamera.launch
omo_r1mini_description/rviz/: model.rviz
omo_r1mini_description/urdf/: common_properties.xacro  r1mini.gv  r1mini.urdf.cyglidar.xacro  r1mini.urdf.hlds.xacro  r1mini.urdf.xacro  r1mini_upcamera.urdf.xacro
omo_r1mini_gazebo/: CMakeLists.txt  package.xml
omo_r1mini_gazebo/launch/: omo_r1mini_empty_world.launch  omo_r1mini_gazebo_rviz.launch  omo_r1mini_turtlebot3_house.launch  omo_r1mini_turtlebot3_world.launch
omo_r1mini_gazebo/sdf/: omo_r1mini.gazebo.xacro
omo_r1mini_navigation/: CMakeLists.txt  package.xml
omo_r1mini_navigation/launch/: amcl.launch  move_base.launch  omo_r1mini_navigation.launch  omo_r1mini_navigation_cyglidar.launch  omo_r1mini_navigation_hlds.launch  omo_r1mini_navigation_rviz.launch
omo_r1mini_navigation/maps/: map.pgm
omo_r1mini_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
omo_r1mini_simple_position_controller/: CMakeLists.txt  package.xml
omo_r1mini_simple_position_controller/config/: controller_setting.yaml
omo_r1mini_simple_position_controller/nodes/: simple_position_controller.py  vanilla_pos_ctrl_ac.py  vanilla_position_controller.py
omo_r1mini_slam/: CMakeLists.txt  package.xml
omo_r1mini_slam/launch/: omo_r1mini_gmapping_cyglidar.launch  omo_r1mini_slam_cyglidar.launch  omo_r1mini_slam_hlds.launch  omo_r1mini_slam_rviz.launch
omo_r1mini_teleop/: CMakeLists.txt  package.xml
omo_r1mini_teleop/launch/: omo_r1mini_teleop_key.launch
omo_r1mini_teleop/nodes/: omo_r1mini_teleop_key.py
omo_r1slam_slam/launch/: omo_r1_gmapping.launch  omo_r1_slam.launch
