<?xml version="1.0"?>
<package format="2">
  <name>omo_r1mini</name>
  <version>0.0.1</version>
  <description>
    OMO R1 robot meta package
  </description>
  <license>Apache 2.0</license>
  <author email="pinkwink@omorobot.com">PinkWink</author>
  <maintainer email="pinkwink@omorobot.com">PinkWink</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>omo_r1mini_bringup</exec_depend>
  <exec_depend>omo_r1mini_description</exec_depend>
  <exec_depend>omo_r1mini_gazebo</exec_depend>
  <exec_depend>omo_r1mini_navigation</exec_depend>
  <exec_depend>omo_r1mini_slam</exec_depend>
  <exec_depend>omo_r1mini_teleop</exec_depend>
  <exec_depend>ydlidar</exec_depend>
  <export><metapackage/></export>
</package>
