<?xml version="1.0"?>
<package format="2">
  <name>omo_r1mini_bringup</name>
  <version>0.0.1</version>
  <description>
    OMO R1 robot package - launchers for robot bringup
  </description>
  <license>Apache 2.0</license>
  <author email="pinkwink@omorobot.com">PinkWink</author>
  <maintainer email="pinkwink@omorobot.com">PinkWink</maintainer>
  <url type="website">http://omorobot.com</url>
  <url type="forum">http://omorobot1.synology.me</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>usb_cam</depend>
  <depend>omo_r1mini_description</depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
